# MLmmj

./: .cvsignore  .hgignore  .hgsub  .hgsubstate  .hgtags  AUTHORS  ChangeLog  FAQ  LICENSE  Makefile.am  Makefile.in  README  README.access  README.archives  README.exim4  README.footers  README.listtexts  README.postfix  README.qmail  README.security  README.sendmail  THANKS  TODO  TUNABLES  UPGRADE  VERSION  config.h.in  configure  configure.ac
contrib/receivestrip/: Makefile.am  README  mlmmj-receive-strip.c
contrib/recievestrip/: .cvsignore  Makefile.am  README  mlmmj-recieve-strip.c
listtexts/: Makefile.am  access  bounce-probe  digest  listhelp  listsubs  maxmailsize  moderation  notifysub  notifysub-digest  notifysub-nomail  notifyunsub  notifyunsub-digest  notifyunsub-nomail  notintocc  sub-confirm  sub-confirm-digest  sub-confirm-nomail  sub-ok  sub-ok-digest  sub-ok-nomail  sub-subscribed  subonlypost  unsub-confirm  unsub-confirm-digest  unsub-confirm-nomail  unsub-ok  unsub-ok-digest  unsub-ok-nomail
listtexts/cz/: README  access  bounce-probe  listhelp  listsubs  moderation  notifysub  notifysub-digest  notifysub-nomail  notifyunsub  notifyunsub-digest  notifyunsub-nomail  notintocc  sub-confirm  sub-confirm-digest  sub-confirm-nomail  sub-ok  sub-ok-digest  sub-ok-nomail  subonlypost  unsub-confirm  unsub-confirm-digest  unsub-confirm-nomail  unsub-ok  unsub-ok-digest  unsub-ok-nomail
listtexts/da/: access  bounce-probe  digest  listfaq  listhelp  listsubs  maxmailsize  moderation  notifysub  notifysub-digest  notifysub-nomail  notifyunsub  notifyunsub-digest  notifyunsub-nomail  notintocc  sub-confirm  sub-confirm-digest  sub-confirm-nomail  sub-deny-digest  sub-deny-nomail  sub-ok  sub-ok-digest  sub-ok-nomail  sub-subscribed  submod-moderator  submod-requester  subonlypost  unsub-confirm  unsub-confirm-digest  unsub-confirm-nomail  unsub-notsubscribed  unsub-ok  unsub-ok-digest  unsub-ok-nomail
listtexts/de/: access  bounce-probe  digest  listfaq  listhelp  listsubs  maxmailsize  moderation  notifysub  notifysub-digest  notifysub-nomail  notifyunsub  notifyunsub-digest  notifyunsub-nomail  notintocc  sub-confirm  sub-confirm-digest  sub-confirm-nomail  sub-deny-digest  sub-deny-nomail  sub-ok  sub-ok-digest  sub-ok-nomail  sub-subscribed  submod-moderator  submod-requester  subonlypost  unsub-confirm  unsub-confirm-digest  unsub-confirm-nomail  unsub-notsubscribed  unsub-ok  unsub-ok-digest  unsub-ok-nomail
listtexts/en/: access  bounce-probe  listhelp  listsubs  maxmailsize  moderation  moderation-poster  notifysub-nomail  notifyunsub-digest  notintocc  sub-deny-digest  sub-ok-digest  sub-subscribed  subonlypost  unsub-confirm-digest  unsub-notsubscribed
listtexts/es/: access  bounce-probe  listfaq  listhelp  listsubs  moderation  notifysub  notifysub-digest  notifysub-nomail  notifyunsub  notifyunsub-digest  notifyunsub-nomail  notintocc  sub-confirm  sub-confirm-digest  sub-confirm-nomail  sub-ok  sub-ok-digest  sub-ok-nomail  sub-subscribed  subonlypost  unsub-confirm  unsub-confirm-digest  unsub-confirm-nomail  unsub-notsubscribed  unsub-ok  unsub-ok-digest  unsub-ok-nomail
listtexts/fr/: access  bounce-probe  listhelp  listsubs  moderation  notifysub  notifysub-digest  notifysub-nomail  notifyunsub  notifyunsub-digest  notifyunsub-nomail  notintocc  sub-confirm  sub-confirm-digest  sub-confirm-nomail  sub-ok  sub-ok-digest  sub-ok-nomail  sub-subscribed  subonlypost  unsub-confirm  unsub-confirm-digest  unsub-confirm-nomail  unsub-notsubscribed  unsub-ok  unsub-ok-digest  unsub-ok-nomail
listtexts/it/: access  bounce-probe  digest  listfaq  listhelp  listsubs  maxmailsize  moderation  notifysub  notifysub-digest  notifysub-nomail  notifyunsub  notifyunsub-digest  notifyunsub-nomail  notintocc  sub-confirm  sub-confirm-digest  sub-confirm-nomail  sub-deny-digest  sub-deny-nomail  sub-ok  sub-ok-digest  sub-ok-nomail  sub-subscribed  submod-moderator  submod-requester  subonlypost  unsub-confirm  unsub-confirm-digest  unsub-confirm-nomail  unsub-notsubscribed  unsub-ok  unsub-ok-digest  unsub-ok-nomail
listtexts/nl/: access  bounce-probe  digest  listfaq  listhelp  listsubs  maxmailsize  moderation  notifysub  notifysub-digest  notifysub-nomail  notifyunsub  notifyunsub-digest  notifyunsub-nomail  notintocc  sub-confirm  sub-confirm-digest  sub-confirm-nomail  sub-deny-digest  sub-deny-nomail  sub-ok  sub-ok-digest  sub-ok-nomail  sub-subscribed  submod-moderator  submod-requester  subonlypost  unsub-confirm  unsub-confirm-digest  unsub-confirm-nomail  unsub-notsubscribed  unsub-ok  unsub-ok-digest  unsub-ok-nomail
listtexts/ru/: access  bounce-probe  digest  listfaq  listhelp  listsubs  maxmailsize  moderation  notifysub  notifysub-digest  notifysub-nomail  notifyunsub  notifyunsub-digest  notifyunsub-nomail  notintocc  sub-confirm  sub-confirm-digest  sub-confirm-nomail  sub-deny-digest  sub-deny-nomail  sub-ok  sub-ok-digest  sub-ok-nomail  sub-subscribed  submod-moderator  submod-requester  subonlypost  unsub-confirm  unsub-confirm-digest  unsub-confirm-nomail  unsub-notsubscribed  unsub-ok  unsub-ok-digest  unsub-ok-nomail
listtexts/tr/: access  bounce-probe  digest  listfaq  listhelp  listsubs  maxmailsize  moderation  notifysub  notifysub-digest  notifysub-nomail  notifyunsub  notifyunsub-digest  notifyunsub-nomail  notintocc  sub-confirm  sub-confirm-digest  sub-confirm-nomail  sub-deny-digest  sub-deny-nomail  (+14 more)
src/: .cvsignore  Makefile.am  Makefile.in  checkwait_smtpreply.c  chomp.c  ctrlvalue.c  ctrlvalues.c  do_all_the_voodo_here.c  do_all_the_voodoo_here.c  dumpfd2fd.c  find_email_adr.c  getaddrsfromfd.c  gethdrline.c  getline.c  getlistaddr.c  getlistdelim.c  header_token.c  incindexfile.c  init_sockfd.c  itoa.c  listcontrol.c  log_error.c  log_oper.c  mail-functions.c  memory.c  mlmmj-bounce.c  mlmmj-list.c  mlmmj-maintd.c  mlmmj-make-ml.in  mlmmj-make-ml.sh  mlmmj-make-ml.sh.in  mlmmj-process.c  mlmmj-receive.c  mlmmj-recieve.c  mlmmj-send.c  mlmmj-sub.c  mlmmj-subscribe.c  mlmmj-unsub.c  mlmmj-unsubscribe.c  mygetline.c  (+17 more)
(+114 files in other folders)
