## Process this file with automake to produce Makefile.in

dist_textlib_DATA = access bounce-probe listhelp moderation notifysub \
	notifysub-digest notifysub-nomail notifyunsub notifyunsub-digest \
	notifyunsub-nomail notintocc sub-confirm sub-confirm-digest \
	sub-confirm-nomail sub-ok sub-ok-digest sub-ok-nomail subonlypost \
	unsub-confirm unsub-confirm-digest unsub-confirm-nomail unsub-ok \
	unsub-ok-digest unsub-ok-nomail listsubs sub-subscribed \
	unsub-notsubscribed digest submod-moderator submod-requester
